<resources>
    <string name="app_name">Reversi</string>
    <string name="start_match">Start match</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="Welcome">Welcome to the Reversi game</string>
    <string name="textHelp">The game consists of filling the maximum number of tiles of your color (the black one), turning the opponent\'s tiles (the app), which will have the white ones.</string>
    <string name="textHelp1">On each turn, the player places a chip in an empty square, so that between this and another of the same color, one or more tiles of the opponent are surrounded. The chips between them are automatically converted to the color of the person who has thrown them.</string>
    <string name="textHelp2">The lines count horizontally, vertically and diagonally. The same tile can capture pieces in different lines, if you want to surround them with this same color.</string>
    <string name="textHelp3">If a player can not place a tile in a described way, he loses his turn. Follow the alternation until neither of you can place a chip or the whole board has been covered with chips.</string>
    <string name="textHelp4">The player who has managed to place more tiles of his color wins.</string>
    <string name="goBack">Go back</string>
    <string name="playerIdentifier">Identifying alias:</string>
    <string name="tableIdentifier">Size of the table:</string>
    <string name="midaGran">8</string>
    <string name="midaMitjana">6</string>
    <string name="midaPetita">4</string>
    <string name="Difficult_easy">Easy</string>
    <string name="Difficult_normal">Normal</string>
    <string name="timeIdentifier">Time control:</string>
    <string name="textCheck">Time control with seconds</string>
    <string name="begin">Start</string>
    <string name="stateMatch">STARTING GAME</string>
    <string name="cpu_name">CPU</string>
    <string name="default_number">0</string>
    <string name="textCellsRemaining">boxes remaining</string>
    <string name="stateResult">Match results: </string>
    <string name="win">You win!</string>
    <string name="lose">You lose!</string>
    <string name="draw">Draw!</string>
    <string name="dateTimeText">Date and time:</string>
    <string name="logValuesText">Log values:</string>
    <string name="send_email">Send e-mail</string>
    <string name="emailText">Recipient of the email:</string>
    <string name="seconds">sec.</string>
    <string name="seconds_long">seconds</string>
    <string name="default_seconds">25</string>
    <string name="alias">Alias:</string>
    <string name="grid_size">Grid size</string>
    <string name="grid_diference">Diference between pieces!</string>
    <string name="game_piece">piece</string>
    <string name="difficultIdentifier">Game difficulty:</string>
    <string name="grid_not_valid">Box not valid. Pull back</string>
    <string name="error_init">The game could not be started</string>
    <string name="error_name_player">Player name is missing</string>
    <string name="error_params_result">Error in the parameters</string>
    <string name="error_destinatary_email">The address of the recipient is missing</string>
    <string name="reversi_result">Reversi results</string>
    <string name="block">Game blocked!</string>
    <string name="timeout">Time is over!</string>
    <string name="left_text">Have left</string>
    <string name="configuration">Configuration</string>
    <string name="helpTitle">Help</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_title">LOG of the match</string>
    <string name="checkItems">Check matches</string>
    <string name="deleteItems">Delete register</string>
    <string name="detailReg">Match details</string>
    <string name="defaultId">#</string>
    <string name="dateTimeReg">Date and time:</string>
    <string name="boardSize">Board size:</string>
    <string name="numBlack">Num. Black:</string>
    <string name="numWhite">Num. White:</string>
    <string name="totalTime">Total time:</string>
    <string name="aliasMenu">Alias</string>
    <string name="boardMenu">Board</string>
    <string name="timeMenu">Time control</string>
    <string name="GameDifficult">Game difficult</string>
    <string name="settingsMenu">Settings</string>

    <string name="affirmative">Yes</string>
    <string name="negative">No</string>
    <string-array name="sizes">
        <item>8</item>
        <item>6</item>
        <item>4</item>
    </string-array>
    <string-array name="difficulties">
        <item>easy</item>
        <item>normal</item>
    </string-array>
</resources>

